--- a/html/index.html
+++ b/html/index.html
@@ -30,8 +30,8 @@
   <section class="counter">
     <p>アクセスカウンタ</p>
   </section>
-  <section>
-    <div class="mypic">
+  <section class="my-profile">
+    <div class="my-pic">
       <img src="../img/img_1.JPG" width="368" height="552">
     </div>
     <div class="profile">
