--- a/html/history.html
+++ b/html/history.html
@@ -27,106 +27,108 @@
   <section class="title">
     <h1>HISTORY</h1>
   </section>
-  <section class="history-list">
-    <div class="rekishi">
-      <h2>学歴と職歴</h2>
+  <section class="origin-list">
+    <div class="history-list">
+      <div class="rekishi">
+        <h2>学歴と職歴</h2>
+      </div>
+      <div class="list1">
+        <table border="1">
+          <tr>
+            <th>2012年04月</th>
+            <th>市立札幌旭丘高等学校 入学</th>
+          </tr>
+          <tr>
+            <th>2015年03月</th>
+            <th>市立札幌旭丘高等学校 卒業</th>
+          </tr>
+          <tr>
+            <th>2015年04月</th>
+            <th>河合塾札幌校 入学</th>
+          </tr>
+          <tr>
+            <th>2016年03月</th>
+            <th>河合塾札幌校 卒業</th>
+          </tr>
+          <tr>
+            <th>2016年04月</th>
+            <th>北海道大学経済学部経済学科 入学</th>
+          </tr>
+          <tr>
+            <th>2016年12月</th>
+            <th>ラルズマート伏見店(アルバイト) 入社</th>
+          </tr>
+          <tr>
+            <th>2019年03月</th>
+            <th>ラルズマート伏見店(アルバイト) 退社</th>
+          </tr>
+          <tr>
+            <th>2019年11月</th>
+            <th>桑園自動車学校 入校</th>
+          </tr>
+          <tr>
+            <th>2020年03月</th>
+            <th>北海道大学経済学部経済学科 卒業</th>
+          </tr>
+          <tr>
+            <th>2020年07月</th>
+            <th>桑園自動車学校 卒業</th>
+          </tr>
+          <tr>
+            <th>2020年08月</th>
+            <th>資格の学校TAC札幌校 入学</th>
+          </tr>
+          <tr>
+            <th>2021年02月</th>
+            <th>(株)TMJ(アルバイト) 入社</th>
+          </tr>
+          <tr>
+            <th>2021年07月</th>
+            <th>(株)TMJ(アルバイト) 退社</th>
+          </tr>
+          <tr>
+            <th>2021年10月</th>
+            <th>資格の学校TAC札幌校 卒業</th>
+          </tr>
+        </table>
+      </div>
     </div>
-    <div class="list1">
-      <table border="1">
-        <tr>
-          <th>2012年04月</th>
-          <th>市立札幌旭丘高等学校 入学</th>
-        </tr>
-        <tr>
-          <th>2015年03月</th>
-          <th>市立札幌旭丘高等学校 卒業</th>
-        </tr>
-        <tr>
-          <th>2015年04月</th>
-          <th>河合塾札幌校 入学</th>
-        </tr>
-        <tr>
-          <th>2016年03月</th>
-          <th>河合塾札幌校 卒業</th>
-        </tr>
-        <tr>
-          <th>2016年04月</th>
-          <th>北海道大学経済学部経済学科 入学</th>
-        </tr>
-        <tr>
-          <th>2016年12月</th>
-          <th>ラルズマート伏見店(アルバイト) 入社</th>
-        </tr>
-        <tr>
-          <th>2019年03月</th>
-          <th>ラルズマート伏見店(アルバイト) 退社</th>
-        </tr>
-        <tr>
-          <th>2019年11月</th>
-          <th>桑園自動車学校 入校</th>
-        </tr>
-        <tr>
-          <th>2020年03月</th>
-          <th>北海道大学経済学部経済学科 卒業</th>
-        </tr>
-        <tr>
-          <th>2020年07月</th>
-          <th>桑園自動車学校 卒業</th>
-        </tr>
-        <tr>
-          <th>2020年08月</th>
-          <th>資格の学校TAC札幌校 入学</th>
-        </tr>
-        <tr>
-          <th>2021年02月</th>
-          <th>(株)TMJ(アルバイト) 入社</th>
-        </tr>
-        <tr>
-          <th>2021年07月</th>
-          <th>(株)TMJ(アルバイト) 退社</th>
-        </tr>
-        <tr>
-          <th>2021年10月</th>
-          <th>資格の学校TAC札幌校 卒業</th>
-        </tr>
-      </table>
-    </div>
-  </section>
-  <section class="shikaku-list">
-    <div class="shikaku">
-      <h2>資格</h2>
-    </div>
-    <div class="list2">
-      <table border="1">
-        <tr>
-          <th>2020年07月</th>
-          <th>普通自動車第一種運転免許</th>
-        </tr>
-        <tr>
-          <th>2021年11月</th>
-          <th>G検定</th>
-        </tr>
-        <tr>
-          <th>2021年12月</th>
-          <th>ITパスポート</th>
-        </tr>
-        <tr>
-          <th>2022年02月</th>
-          <th>ORACLE MASTER Bronze DBA 2019</th>
-        </tr>
-        <tr>
-          <th>2022年04月</th>
-          <th>LPIC-1 (101&102)</th>
-        </tr>
-        <tr>
-          <th>2022年04月</th>
-          <th>AWS Certified Solutions Architect - Associate</th>
-        </tr>
-        <tr>
-          <th>2022年05月</th>
-          <th>CCNA</th>
-        </tr>
-      </table>
+    <div class="shikaku-list">
+      <div class="shikaku">
+        <h2>資格</h2>
+      </div>
+      <div class="list2">
+        <table border="1">
+          <tr>
+            <th>2020年07月</th>
+            <th>普通自動車第一種運転免許</th>
+          </tr>
+          <tr>
+            <th>2021年11月</th>
+            <th>G検定</th>
+          </tr>
+          <tr>
+            <th>2021年12月</th>
+            <th>ITパスポート</th>
+          </tr>
+          <tr>
+            <th>2022年02月</th>
+            <th>ORACLE MASTER Bronze DBA 2019</th>
+          </tr>
+          <tr>
+            <th>2022年04月</th>
+            <th>LPIC-1 (101&102)</th>
+          </tr>
+          <tr>
+            <th>2022年04月</th>
+            <th>AWS Certified Solutions Architect - Associate</th>
+          </tr>
+          <tr>
+            <th>2022年05月</th>
+            <th>CCNA</th>
+          </tr>
+        </table>
+      </div>
     </div>
   </section>
   <footer class="footer">
