change home image

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
   </section>
   <section class="my-profile">
     <div class="my-pic">
-      <img src="../img/img_1.JPG" width="368" height="552">
+      <img src="../img/img_1.JPG" height="640">
     </div>
     <div class="profile">
       <h2>プロフィール</h2>
