--- a/html/login.html
+++ b/html/login.html
@@ -4,29 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <title>Self-Introduction</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-
-  <header></header>
-  <nav>
-    <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="about.html">ABOUT</a></li>
-      <li><a href="history.html">HISTORY</a></li>
-      <li><a href="secret.html">SECRET</a></li>
-    </ul>
-  </nav>
-  <article>
-    <h1>タイトル</h1>
-    <section>
-      <h2>タイトル</h2>
-      <p>コンテンツの内容</p>
-    </section>
-  </article>
-  <footer></footer>
+  <header class="header-flex">
+    <h1>
+      <a href="index.html">
+        <img src="../img/img_2.png" alt="家">
+      </a>
+    </h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="history.html">HISTORY</a></li>
+        <li><a href="login.html">LOGIN</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="title">
+    <h1>LOGIN</h1>
+  </section>
+  <section>
+    
+  </section>
+  <footer class="footer">
+    <nav>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="history.html">HISTORY</a></li>
+        <li><a href="secret.html">SECRET</a></li>
+      </ul>
+    </nav>
+    <p class="copyright">©Copyright Self-Introduction,ALL rights reserved.</p>
+  </footer>
 </body>
 
 </html>
