--- a/html/index.html
+++ b/html/index.html
@@ -27,9 +27,7 @@
     </div>
   </header>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <main>
 
-  </main>
   <script>
     $(function () {
       $("#toggle").click(function () {
@@ -64,7 +62,7 @@
       </div>
 
       <small class="cmark">:copyright:copyright 2022
-        <a href="#">Self-Introduction.</a>
+        <font color="white">Self-Introduction.</font>
       </small>
     </div>
   </footer>
