--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,12 @@
     </div>
   </header>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+  <div class="top-img">
+    <img src="../img/top.jpg" alt="札幌の夜景" />
+    <div class="mask">
+      <div class="caption">WELCOME TO MY<br> SELF-INTRODUCTION SITE!</div>
+    </div>
+  </div>
   <script>
     $(function () {
       $("#toggle").click(function () {
