edit certification.html, favorite.html, and history.html

--- a/html/about.html
+++ b/html/about.html
@@ -12,8 +12,8 @@
   <header class="header">
     <div class="header-layout">
       <h1>Self-Introduction</h1>
-      <div class='btn'>
-        <a href=''>Secret</a>
+      <div class="btn">
+        <a href="./certification.html">Secret</a>
       </div>
     </div>
     <div id="menu-box">
@@ -29,9 +29,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <div class="profile">
     <img class="profile__img" src="../img/about.jpg">
-    <div class="profile__name">名字 名前</div>
-    <div class="profile__yomi">Namae Myouji</div>
-    <div class="profile__desc">ここに簡単な自己紹介が入ります。ここに簡単な自己紹介が入ります。ここに簡単な自己紹介が入ります。ここに簡単な自己紹介が入ります。</div>
+    <div class="profile__name">俵谷 一帆</div>
+    <div class="profile__yomi">Kazuho Tawaraya</div>
+    <div class="profile__desc">大好きな動物はゴリラです。小学生のころから自然とお気に入りになっていました。渋さと色、フォルムがいいと思います。</div>
   </div>
   <script>
     $(function () {
