--- a/html/history.html
+++ b/html/history.html
@@ -12,8 +12,8 @@
   <header class="header">
     <div class="header-layout">
       <h1>Self-Introduction</h1>
-      <div class='btn'>
-        <a href=''>Secret</a>
+      <div class="btn">
+        <a href="./certification.html">Secret</a>
       </div>
     </div>
     <div id="menu-box">
