--- a/html/certification.html
+++ b/html/certification.html
@@ -29,12 +29,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <fieldset>
     <h1 class="certification-title">Certification</h1>
-    <form>
+    <form action="../php/certification.php" method="post">
       <div class="iconUser"></div>
-      <input type="text" placeholder="Name" required>
+      <input type="text" name="name" placeholder="Name" required>
       <div class="iconPassword"></div>
-      <input type="password" placeholder="Password" required>
-      <input type="submit" value="Enter">
+      <input type="password" name="password" placeholder="Password" required>
+      <input type="submit" name="login" value="Enter">
     </form>
   </fieldset>
   <script>
