--- a/html/secret.html
+++ b/html/secret.html
@@ -27,7 +27,9 @@
     </div>
   </header>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+  <div class="top-img">
+    <img src="../img/img_secret.gif" alt="爆発" />
+  </div>
   <script>
     $(function () {
       $("#toggle").click(function () {
