--- a/html/certification.html
+++ b/html/certification.html
@@ -13,7 +13,7 @@
     <div class="header-layout">
       <h1>Self-Introduction</h1>
       <div class="btn">
-        <a href="./certification.html">Secret</a>
+        <a href="./certification.html">Top</a>
       </div>
     </div>
     <div id="menu-box">
