edit name-err.html and password-err.html

--- a/html/certification.html
+++ b/html/certification.html
@@ -27,7 +27,7 @@
     </div>
   </header>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <fieldset>
+  <fieldset class="certification-box">
     <h1 class="certification-title">Certification</h1>
     <form action="../php/certification.php" method="post">
       <div class="iconUser"></div>
