add to_do_list and its bottun

--- a/html/favorite.html
+++ b/html/favorite.html
@@ -29,11 +29,12 @@
         <li><a href="./about.html">ABOUT</a></li>
         <li><a href="./history.html">HISTORY</a></li>
         <li><a href="./favorite.html">FAVORITE</a></li>
+        <li><a href="./to_do_list.html">TO DO LIST</a></li>
       </ul>
     </div>
   </header>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <h2>Favorite Anime</h2>
+  <h2 class="favorite_title">Favorite Anime</h2>
   <ul class="slider">
     <li><img src="../img/favorite_1.jpg" alt=""></li>
     <li><img src="../img/favorite_2.png" alt=""></li>
@@ -71,6 +72,7 @@
           <li><a href="./about.html">ABOUT</a></li>
           <li><a href="./history.html">HISTORY</a></li>
           <li><a href="./favorite.html">FAVORITE</a></li>
+          <li><a href="./to_do_list.html">TO DO LIST</a></li>
         </ul>
       </div>
       <div class="menu-center">
