--- a/html/to_do_list.html
+++ b/html/to_do_list.html
@@ -13,7 +13,7 @@
     <div class="header-layout">
       <h1>Self-Introduction</h1>
       <div class="btn">
-        <a href="./certification.html">Top</a>
+        <a href="./certification.html">Secret</a>
       </div>
     </div>
     <div id="menu-box">
@@ -27,33 +27,9 @@
       </ul>
     </div>
   </header>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <h3 class="err-message">Password error. Try again!</h3>
-  <fieldset class="erroor-box">
-    <h1 class="certification-title">Certification</h1>
-    <form action="../php/certification.php" method="post">
-      <div class="iconUser"></div>
-      <input type="text" name="name" placeholder="Name" required>
-      <div class="iconPassword"></div>
-      <input type="password" name="password" placeholder="Password" required>
-      <input type="submit" name="login" value="Enter">
-    </form>
-  </fieldset>
-  <script>
-    $(function () {
-      $("#toggle").click(function () {
-        $("#menu").slideToggle();
-        return false;
-      });
-      $(window).resize(function () {
-        var win = $(window).width();
-        var p = 480;
-        if (win > p) {
-          $("#menu").show();
-        }
-      });
-    });
-  </script>
+  
   <footer>
     <div class="foot-wrap">
       <div class="menu-left">
