--- a/html/certification.html
+++ b/html/certification.html
@@ -13,7 +13,7 @@
     <div class="header-layout">
       <h1>Self-Introduction</h1>
       <div class="btn">
-        <a href="./certification.html">Top</a>
+        <a href="./index.html">Top</a>
       </div>
     </div>
     <div id="menu-box">
@@ -23,6 +23,7 @@
         <li><a href="./about.html">ABOUT</a></li>
         <li><a href="./history.html">HISTORY</a></li>
         <li><a href="./favorite.html">FAVORITE</a></li>
+        <li><a href="./to_do_list.html">TO DO LIST</a></li>
       </ul>
     </div>
   </header>
@@ -61,6 +62,7 @@
           <li><a href="./about.html">ABOUT</a></li>
           <li><a href="./history.html">HISTORY</a></li>
           <li><a href="./favorite.html">FAVORITE</a></li>
+          <li><a href="./to_do_list.html">TO DO LIST</a></li>
         </ul>
       </div>
       <div class="menu-center">
