--- a/html/secret.html
+++ b/html/secret.html
@@ -23,6 +23,7 @@
         <li><a href="./about.html">ABOUT</a></li>
         <li><a href="./history.html">HISTORY</a></li>
         <li><a href="./favorite.html">FAVORITE</a></li>
+        <li><a href="./to_do_list.html">TO DO LIST</a></li>
       </ul>
     </div>
   </header>
@@ -54,6 +55,7 @@
           <li><a href="./about.html">ABOUT</a></li>
           <li><a href="./history.html">HISTORY</a></li>
           <li><a href="./favorite.html">FAVORITE</a></li>
+          <li><a href="./to_do_list.html">TO DO LIST</a></li>
         </ul>
       </div>
       <div class="menu-center">
