--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
   <title>Self-Introduction</title>
   <link rel="stylesheet" href="../css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon/favicon.ico" id="favicon">
 </head>
 
 <body>
